tests/invalid/list_insert_wrong_arg_count/main.py
def run_case() -> None:
    xs: list[int] = [1, 2]
    xs.insert(0)


if __name__ == "__main__":
    run_case()
